# twoparty-mpc

./: .gitignore  Cargo.toml  README.md  compile.sh  makefile
mpc22-java/: pom.xml
mpc22-java/src/main/java/twoparty/mpc/: Main.java  MpcTypes.java  NativeMpc.java  twoparty_mpc_NativeMpc.h
mpc22-java/src/test/java/: Ed25519Test.java  Secp256k1Test.java
twoparty-client/: Cargo.toml  README.md  build.rs
twoparty-client/src/: lib.rs
twoparty-client/src/ffi/: ecdsa.rs  mod.rs
twoparty-client/src/mpc/: ecdsa.rs  ed25519.rs  mod.rs  secp256k1.rs  test.rs
twoparty-client/src/websocket/: mod.rs  request_holder.rs  test.rs
twoparty-client/tests/: add_overflow.rs
twoparty-common/: Cargo.toml
twoparty-common/src/: dlog.rs  errors.rs  lib.rs
twoparty-common/src/socketmsg/: mod.rs  types.rs
twoparty-common/tests/: point_bytes.rs  tsp.rs
twoparty-ed25519/: Cargo.toml
twoparty-ed25519/src/: lib.rs
twoparty-ed25519/src/generic/: mod.rs  share.rs
twoparty-ed25519/src/keygen/: mod.rs  party1.rs  party2.rs
twoparty-ed25519/src/rotate/: mod.rs  party1.rs  party2.rs
twoparty-ed25519/src/sign/: mod.rs  party1.rs  party2.rs
twoparty-ed25519/src/tests/: mod.rs  share1.json  share2.json  sui_verify.rs
twoparty-ed25519/tests/: edwards25519.rs
twoparty-eddsa/: Cargo.toml
twoparty-secp256k1/: Cargo.toml
twoparty-secp256k1/examples/: research.rs
twoparty-secp256k1/src/: lib.rs
twoparty-secp256k1/src/export/: mod.rs  party1.rs  party2.rs  test.rs
twoparty-secp256k1/src/generic/: challenge_dlog.rs  mod.rs  share.rs
twoparty-secp256k1/src/keygen/: correct_encrypt_secret.rs  mod.rs  party1.rs  party2.rs  share.rs  test.rs
twoparty-secp256k1/src/rotate/: mod.rs  party1.rs  party2.rs  test.rs
twoparty-secp256k1/src/sign/: mod.rs  party1.rs  party2.rs  test.rs
twoparty-secp256k1/src/tests/: mod.rs
twoparty-server/: Cargo.toml
twoparty-server/src/: main.rs
twoparty-server/src/config/: mod.rs
twoparty-server/src/controller/: mod.rs  ws_config.rs
twoparty-server/src/resources/: config-prod.yml  config-test.yml
twoparty-server/src/storage/: mod.rs  share_storage.rs
twoparty-server/src/websocket/: connection_holder.rs  inbound_dispatcher.rs  mod.rs
twoparty-server/src/websocket/handler/: mod.rs  mpc22_ed25519.rs  mpc22_handler.rs  mpc22_secp256k1.rs
twoparty-server/tests/: mutex_map.rs  tokio_spawn.rs
