[workspace]

members = [
    "twoparty-common",
    "twoparty-secp256k1",
    "twoparty-eddsa",
]

[workspace.dependencies]
zk-paillier = { version = "0.4.4", default-features = false }
kzen-paillier = { version = "0.4.3", default-fratures = false }
curv-kzen = { version = "0.10.0", default-features = false }
serde = "1.0.160"
serde_json = "1.0.96"
sha3 = "0.9"  # curv-kzen::DLogProof api can only use version=0.9
uuid = "1.3.2"
common = { package = "twoparty-common", path = "twoparty-common" }


