[workspace]

members = [
    "twoparty-common",
    "twoparty-secp256k1",
    "twoparty-ed25519",
    "twoparty-server",
    "twoparty-client",
]

[workspace.dependencies]
zk-paillier = { version = "0.4.4", default-features = false }
kzen-paillier = { version = "0.4.3", default-fratures = false }
curv-kzen = { version = "0.10.0", default-features = false }
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sha3 = "0.9"  # curv-kzen::DLogProof api can only use version=0.9
uuid = "1.3.2"
common = { package = "twoparty-common", path = "twoparty-common" }
subtle = "2.5.0"
rand = "0.8.5"
hex = "0.4.3"
tokio-tungstenite = "0.19.0"
futures-util = { version = "0.3.28", default-features = false}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
tokio = "1.28.2"
#axum = "0.6.18"
axum={git="https://github.com/tokio-rs/axum", rev="eafee2d2f40df82c5ac9016bf27d0d9ffe8bfe7b"}

[patch.crates-io]
curv-kzen = { git = "https://github.com/Gimmi7/curv-cy", rev = "906ad3a349a49d16c378d1c9b22e6cef8427d886" }

