[workspace]

members = [
    "twoparty-common",
    "twoparty-secp256k1",
    "twoparty-ed25519",
    "twoparty-server",
    "twoparty-client",
]
default-members = ["twoparty-server"]

[workspace.dependencies]
zk-paillier = { version = "0.4.4", git = "https://github.com/Gimmi7/zk-paillier-cy", rev = "d832f389f853bcb8c801c7c9dea73be077f222e3" }
kzen-paillier = { version = "0.4.3", git = "https://github.com/Gimmi7/rust-paillier-cy", rev = "939aeba2d33b0f7c56e6b11c6362fe7db99dff81" }
curv-kzen = { version = "0.10.0", git = "https://github.com/Gimmi7/curv-cy", rev = "6fd33a919a2e03805b488e6b23a5eeae621b93d0" }
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sha3 = "0.9"  # curv-kzen::DLogProof api can only use version=0.9
uuid = "1.3.2"
common = { package = "twoparty-common", path = "twoparty-common" }
twoparty-secp256k1 = { path = "twoparty-secp256k1" }
twoparty-ed25519 = { path = "twoparty-ed25519" }
subtle = "2.5.0"
rand = "0.8.5"
hex = "0.4.3"
tokio-tungstenite = "0.19.0"
futures-util = { version = "0.3.28", default-features = false }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
tokio = "1.28.2"
axum = { git = "https://github.com/tokio-rs/axum", rev = "eafee2d2f40df82c5ac9016bf27d0d9ffe8bfe7b" }

#[patch.crates-io]
#curv-kzen = { git = "https://github.com/Gimmi7/curv-cy", rev = "906ad3a349a49d16c378d1c9b22e6cef8427d886" }
#kzen-paillier= {git="https://github.com/Gimmi7/rust-paillier-cy", rev="682c196e9055973ef24879a82e14ba80fb7d578c"}
#zk-paillier={git="https://github.com/Gimmi7/zk-paillier-cy", rev="cd0f623071a3cfbdcf343c21b6a5f701b9d31429"}