[package]
name = "twoparty-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { workspace = true, features=["rustls-tls-webpki-roots"] }
futures-util = { workspace = true, features = ["sink", "std"] }
url = "2.3.1"
tokio = { workspace = true, features = ["full"] }
common.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
twoparty-secp256k1 = { workspace = true }
twoparty-ed25519 = { workspace = true }
curv-kzen = { workspace = true}

#[target.'cfg(target_os="android")'.dependencies]
jni = "0.21.1"


[lib]
crate_type = ["cdylib"]