[package]
name = "twoparty-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
curv-kzen.workspace = true
sha3.workspace = true
hex.workspace = true
uuid = { workspace = true, features = ["v4"] }
serde_json.workspace = true



[features]
default = ["curv-kzen/rust-gmp-kzen"]