[package]
name = "twoparty-ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv-kzen.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
common.workspace = true
sha2 = "0.9"

[dev-dependencies]
ed25519-dalek = "2.0.0-rc.2"

[features]
default = ["curv-kzen/rust-gmp-kzen"]