[package]
name = "twoparty-secp256k1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zk-paillier = { workspace = true }
kzen-paillier = { workspace = true }
curv-kzen = { workspace = true}
sha3.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ['v4'] }
common.workspace = true
subtle.workspace = true



