[package]
name = "twoparty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
clap = { version = "4.3.0", features = ["derive"] }
include_dir = "0.7.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
